[gd_scene load_steps=8 format=3 uid="uid://cygke7njggw7b"]

[ext_resource type="Script" path="res://scenes/spells_section/spells_menu.gd" id="1_jrmhn"]
[ext_resource type="Texture2D" uid="uid://b71mcpefh1qhp" path="res://assets/images/edit_white.png" id="2_gn6g5"]
[ext_resource type="Texture2D" uid="uid://6lvrvyosa735" path="res://assets/images/edit_gray.png" id="3_3mplg"]
[ext_resource type="Texture2D" uid="uid://d1bx75plyf8r7" path="res://assets/images/edit_select.png" id="3_erjew"]
[ext_resource type="Texture2D" uid="uid://mnpt3y2ctiav" path="res://assets/images/edit_pressed.png" id="5_6mt12"]
[ext_resource type="PackedScene" uid="uid://b2l3pdm5jnp54" path="res://scenes/spells_section/edit_if_menu.tscn" id="6_usign"]

[sub_resource type="GDScript" id="GDScript_wxq2g"]
script/source = "extends PanelContainer


"

[node name="MarginContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jrmhn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
script = SubResource("GDScript_wxq2g")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HECHIZOS"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="NormalSpell" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "NORMAL SPELL"

[node name="IfSpell" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "IF SPELL    "

[node name="EditIf" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/IfSpell"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 130.0
offset_top = 10.0
offset_right = 355.0
offset_bottom = 235.0
scale = Vector2(0.08, 0.08)
texture_normal = ExtResource("2_gn6g5")
texture_pressed = ExtResource("3_erjew")
texture_hover = ExtResource("3_3mplg")
texture_focused = ExtResource("5_6mt12")

[node name="WhileSpell" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "WHILE SPELL"

[node name="ForSpell" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FOR SPELL    "

[node name="Edit" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/ForSpell"]
layout_mode = 0
offset_left = 170.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 330.0
scale = Vector2(0.08, 0.08)
texture_normal = ExtResource("2_gn6g5")
texture_pressed = ExtResource("3_erjew")
texture_hover = ExtResource("3_3mplg")
texture_focused = ExtResource("5_6mt12")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EditIfMenu" parent="CanvasLayer" instance=ExtResource("6_usign")]
process_mode = 3
